chore: change export

--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <script type="module">
-    import { ImgPreload } from '../src/index'
+    import ImgPreload from '../src/index'
     new ImgPreload()
   </script>
 </body>
