chore: change bundle behaviour

--- a/example/index.html
+++ b/example/index.html
@@ -23,6 +23,6 @@
   <img style="top: 2100px;" data-src="https://source.geminikspace.com/就是哈比.jpg" alt="">
   <img style="top: 2800px;" data-src="https://source.geminikspace.com/飞行器的执行周期.jpg" alt="">
 
-  <script type="module" src="index.js"></script>
+  <script type="module" src="index.ts"></script>
 </body>
 </html>
