fix: wtf colors

--- a/example/index.html
+++ b/example/index.html
@@ -43,12 +43,12 @@
       width: 200px;
       height: 150px;
       box-shadow: 4px 4px 4px inset rgb(0, 255, 255, .2), -4px -4px 4px inset rgb(0, 255, 255, .2);
-      color: rgb(0, 255, 255, .5);
+      color: rgba(32, 163, 163, 0.8);
       border-radius: 10px;
       z-index: 1;
     }
     .intro li {
-      color: rgb(0, 255, 255, .5);
+      color: rgba(32, 163, 163, 0.8);
     }
     .loaded-list-wrap {
       position: fixed;
@@ -59,11 +59,11 @@
       border-radius: 10px;
       z-index: 1;
       box-shadow: 4px 4px 4px inset rgb(0, 255, 255, .2), -4px -4px 4px inset rgb(0, 255, 255, .2);
-      color: rgb(0, 255, 255, .6);
+      color: rgba(32, 163, 163, 0.9);
     }
     .loaded-list li {
       cursor: pointer;
-      color: rgb(0, 255, 255, .5)
+      color: rgba(32, 163, 163, 0.8)
     }
     .loaded-list li:hover {
       color: rgb(0, 255, 255);
